--- a/AssemblyBuddy/MainWindow.xaml
+++ b/AssemblyBuddy/MainWindow.xaml
@@ -1,8 +1,23 @@
 ﻿<Window x:Class="AssemblyBuddy.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Assembly Buddy" Height="350" Width="525">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="3*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="3*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="Source" Grid.Column="0" Grid.Row="0" />
+        <TextBox Grid.Column="1" Grid.Row="0" />
+        <TextBlock Text="Target" Grid.Column="0" Grid.Row="1" />
+        <TextBox Grid.Column="1" Grid.Row="1" />
+        <TextBlock Text="Assemblies to update" Grid.Column="0" Grid.Row="2" />
+        <ListBox Grid.Column="1" Grid.Row="2" />
         
     </Grid>
 </Window>
