--- a/AssemblyBuddy/MainWindow.xaml
+++ b/AssemblyBuddy/MainWindow.xaml
@@ -1,23 +1,35 @@
 ﻿<Window x:Class="AssemblyBuddy.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Assembly Buddy" Height="350" Width="525">
+        Title="Assembly Buddy" Height="350" Width="525" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Style x:Key="LabelStyle" TargetType="TextBlock">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+        <Style x:Key="TextInputStyle" TargetType="TextBox">
+            <Setter Property="Margin" Value="8" />
+        </Style>
+        <Style x:Key="ListOutputStyle" TargetType="ListBox">
+            <Setter Property="Margin" Value="8" />
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
-        <TextBlock Text="Source" Grid.Column="0" Grid.Row="0" />
-        <TextBox Grid.Column="1" Grid.Row="0" />
-        <TextBlock Text="Target" Grid.Column="0" Grid.Row="1" />
-        <TextBox Grid.Column="1" Grid.Row="1" />
-        <TextBlock Text="Assemblies to update" Grid.Column="0" Grid.Row="2" />
-        <ListBox Grid.Column="1" Grid.Row="2" />
+        <TextBlock Style="{StaticResource LabelStyle}" Text="Source" Grid.Column="0" Grid.Row="0" />
+        <TextBox Style="{StaticResource TextInputStyle}" Grid.Column="1" Grid.Row="0" ToolTip="The directories where the new assemblies are located" />
+        <TextBlock Style="{StaticResource LabelStyle}" Text="Target" Grid.Column="0" Grid.Row="1" />
+        <TextBox Style="{StaticResource TextInputStyle}" Grid.Column="1" Grid.Row="1" ToolTip="The directory from which the assemblies are referenced (ex: References, Assemblies, etc.)" />
+        <TextBlock Style="{StaticResource LabelStyle}" Text="Assemblies to update" Grid.Column="0" Grid.Row="2" />
+        <ListBox Style="{StaticResource ListOutputStyle}" Grid.Column="1" Grid.Row="2" />
         
     </Grid>
 </Window>
