--- a/AssemblyBuddy/MainWindow.xaml
+++ b/AssemblyBuddy/MainWindow.xaml
@@ -15,6 +15,11 @@
         <Style x:Key="ListOutputStyle" TargetType="ListBox">
             <Setter Property="Margin" Value="8" />
         </Style>
+        <DataTemplate x:Key="FileMatchDataTemplate">
+            <Grid>
+                <TextBlock Text="{Binding Path=SourceFile.Filename }" />
+            </Grid>
+        </DataTemplate>
     </Window.Resources>
     <Grid DataContext="{Binding Source={StaticResource MainViewModel}}">
         <Grid.RowDefinitions>
@@ -31,7 +36,7 @@
         <TextBlock Style="{StaticResource LabelStyle}" Text="Destination" Grid.Column="0" Grid.Row="1" />
         <TextBox Style="{StaticResource TextInputStyle}" Text="{Binding DestinationPath}" Grid.Column="1" Grid.Row="1" ToolTip="The directory from which the assemblies are referenced (ex: References, Assemblies, etc.)" />
         <TextBlock Style="{StaticResource LabelStyle}" Text="Assemblies to update" Grid.Column="0" Grid.Row="2" />
-        <ListBox Style="{StaticResource ListOutputStyle}" ItemsSource="{Binding AssemblyList}"  Grid.Column="1" Grid.Row="2" />
+        <ListBox Style="{StaticResource ListOutputStyle}" ItemsSource="{Binding AssemblyList}" ItemTemplate="{StaticResource FileMatchDataTemplate}"  Grid.Column="1" Grid.Row="2" />
         
     </Grid>
 </Window>
