--- a/AssemblyBuddy/MainWindow.xaml
+++ b/AssemblyBuddy/MainWindow.xaml
@@ -15,6 +15,11 @@
         <Style x:Key="ListOutputStyle" TargetType="ListBox">
             <Setter Property="Margin" Value="8" />
         </Style>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="8" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
         <DataTemplate x:Key="FileMatchDataTemplate">
             <Grid>
                 <TextBlock Text="{Binding Path=SourceFile.Filename }" />
@@ -25,7 +30,9 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="3*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -35,8 +42,12 @@
         <TextBox Style="{StaticResource TextInputStyle}" Text="{Binding SourcePath}" Grid.Column="1" Grid.Row="0" ToolTip="The directories where the new assemblies are located" />
         <TextBlock Style="{StaticResource LabelStyle}" Text="Destination" Grid.Column="0" Grid.Row="1" />
         <TextBox Style="{StaticResource TextInputStyle}" Text="{Binding DestinationPath}" Grid.Column="1" Grid.Row="1" ToolTip="The directory from which the assemblies are referenced (ex: References, Assemblies, etc.)" />
-        <TextBlock Style="{StaticResource LabelStyle}" Text="Assemblies to update" Grid.Column="0" Grid.Row="2" />
-        <ListBox Style="{StaticResource ListOutputStyle}" ItemsSource="{Binding AssemblyList}" ItemTemplate="{StaticResource FileMatchDataTemplate}"  Grid.Column="1" Grid.Row="2" />
+        <Button Style="{StaticResource ButtonStyle}" Command="{Binding CompareCommand}" Content="Compare" Grid.Row="2" Grid.Column="1" />
+        <TextBlock Style="{StaticResource LabelStyle}" Text="Assemblies to update" Grid.Column="0" Grid.Row="3" />
+        <ListBox Style="{StaticResource ListOutputStyle}" ItemsSource="{Binding AssemblyList}" ItemTemplate="{StaticResource FileMatchDataTemplate}"  Grid.Column="1" Grid.Row="3" />
+        <Grid Grid.Row="4" Grid.Column="1">
+            <Button Style="{StaticResource ButtonStyle}" Command="{Binding CopyCommand}" Content="Copy"/>
+        </Grid>
         
     </Grid>
 </Window>
