--- a/AssemblyBuddy/MainWindow.xaml
+++ b/AssemblyBuddy/MainWindow.xaml
@@ -2,12 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:AssemblyBuddy.ViewModel"
-        Title="Assembly Buddy" Height="350" Width="525" WindowStartupLocation="CenterScreen">
+        Title="Assembly Buddy" Height="350" Width="525" WindowStartupLocation="CenterScreen" MinHeight="300" MinWidth="400">
     <Window.Resources>
         <vm:MainViewModel x:Key="MainViewModel" />
         <Style x:Key="LabelStyle" TargetType="TextBlock">
             <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="Margin" Value="8" />
         </Style>
         <Style x:Key="TextInputStyle" TargetType="TextBox">
             <Setter Property="Margin" Value="8" />
@@ -20,17 +21,6 @@
             <Setter Property="HorizontalAlignment" Value="Right" />
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
-        <DataTemplate x:Key="FileMatchDataTemplate">
-            <Grid HorizontalAlignment="Stretch" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="8" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="{Binding Path=Match.SourceFile.Filename }" Grid.Column="0" />
-                <TextBlock Text="{Binding Path=ComparisonResult }" Grid.Column="2" />
-            </Grid>
-        </DataTemplate>
     </Window.Resources>
     <Grid DataContext="{Binding Source={StaticResource MainViewModel}}">
         <Grid.RowDefinitions>
@@ -41,8 +31,8 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <TextBlock Style="{StaticResource LabelStyle}" Text="Source" Grid.Column="0" Grid.Row="0" />
         <TextBox Style="{StaticResource TextInputStyle}" Text="{Binding SourcePath}" Grid.Column="1" Grid.Row="0" ToolTip="The directories where the new assemblies are located" />
@@ -50,7 +40,14 @@
         <TextBox Style="{StaticResource TextInputStyle}" Text="{Binding DestinationPath}" Grid.Column="1" Grid.Row="1" ToolTip="The directory from which the assemblies are referenced (ex: References, Assemblies, etc.)" />
         <Button Style="{StaticResource ButtonStyle}" Command="{Binding CompareCommand}" Content="Compare" Grid.Row="2" Grid.Column="1" />
         <TextBlock Style="{StaticResource LabelStyle}" Text="Assemblies to update" Grid.Column="0" Grid.Row="3" />
-        <ListBox Style="{StaticResource ListOutputStyle}" ItemsSource="{Binding AssemblyList}" ItemTemplate="{StaticResource FileMatchDataTemplate}"  Grid.Column="1" Grid.Row="3" />
+        <ListView ItemsSource="{Binding AssemblyList}" Grid.Column="1" Grid.Row="3">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="File" DisplayMemberBinding="{Binding Match.SourceFile.Filename }"  />
+                    <GridViewColumn Header="Result" DisplayMemberBinding="{Binding ComparisonResult }" />
+                </GridView>
+            </ListView.View>
+        </ListView>
         <Grid Grid.Row="4" Grid.Column="1">
             <Button Style="{StaticResource ButtonStyle}" Command="{Binding CopyCommand}" Content="Copy"/>
         </Grid>
